<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="8dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="8dp"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/filter_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintBottom_toTopOf="@id/title_barrier"
        app:lottie_rawRes="@raw/filter"
        app:lottie_autoPlay="false"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/rover_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintStart_toEndOf="@id/filter_button"
        app:layout_constraintEnd_toStartOf="@id/calendar_button"
        app:layout_constraintBottom_toTopOf="@id/title_barrier"
        android:gravity="center_horizontal"
        android:text="@string/name_curiosity"
        android:textSize="20sp"/>

    <ImageButton
        android:id="@+id/calendar_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintBottom_toTopOf="@+id/title_barrier"
        android:src="@drawable/ic_calendar"
        android:background="@drawable/calendar_background" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/title_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="calendar_button"
        app:barrierDirection="bottom"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progress_bar"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:lottie_rawRes="@raw/progress_bar_one"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/error_message_cardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/internet_connection_message"
                android:textSize="20sp"
                android:id="@+id/error_message_textview"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/replay_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/error_message_textview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/replay_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/replay_arrow"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/replay_text"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/replay_text"
                    android:text="@string/retry_button"
                    android:textSize="22sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/title_barrier">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photo_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:orientation="vertical"
            tools:visibility="visible"
            android:visibility="gone"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            android:background="@drawable/rounded">

            <ImageView
                android:id="@+id/taken"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_baseline_remove_24"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/from_squad"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                app:layout_constraintTop_toBottomOf="@+id/taken"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:startIconDrawable="@drawable/ic_baseline_date_range_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/photoday_fragment_from"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                android:inputType="date">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/from_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:background="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/to_squad"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                app:layout_constraintTop_toBottomOf="@id/from_squad"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:startIconDrawable="@drawable/ic_baseline_date_range_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/photoday_fragment_to"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                android:inputType="date">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/to_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:background="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/show_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/to_squad"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/photoday_fragment_show"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>